Remoção de icones, ajuste no path das fotos com o servidor de produção

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>br.com.ecc</groupId>
     <artifactId>ecc</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
 
     <properties>
